# W0RM

./: .gitignore  ALU opcodes.txt  Instruction encoding.txt  README.md
assembler/: CMakeLists.txt  w0rm-asm.py
assembler/src/: CMakeLists.txt
assembler/tests/: CMakeLists.txt
fpga/: W0RM.xise  W0RM_Example_ChipScope.cdc
fpga/demo/: W0RM_Demo.ucf  W0RM_Demo.v  W0RM_Demo_tb.v
fpga/demo/programs/: blink-led.S  boot-loader.S  gen-hex-files.sh  switch-copy.S
fpga/example/: W0RM_Example_Design.S  W0RM_Example_Design.c  W0RM_Example_Design.coe  W0RM_Example_Design.ucf  W0RM_Example_Design.v  W0RM_Example_Design_tb.v
fpga/ipcore_dir/: W0RM_CoreRAM_Block.xco  W0RM_CoreRAM_Block.xise  W0RM_CoreRAM_Slice.xco  W0RM_CoreRAM_Slice.xise  W0RM_Example_Design_Instruction_ROM.xco  W0RM_Example_Design_Instruction_ROM.xise  W0RM_Int_AddSub.xco  W0RM_Int_AddSub.xise  W0RM_Int_Div.xco  W0RM_Int_Div.xise  W0RM_Int_Mul.xco  W0RM_Int_Mul.xise
fpga/src/: W0RM_TopLevel.v
fpga/src/core/: ALU.v  ALU_AddSub.v  ALU_DivRem.v  ALU_Extend.v  ALU_Logic.v  ALU_Multiply.v  ALU_Shifts.v  Branch.v  Bus.v  Control.v  CoreMemory.v  Decode.v  IFetch.v  Interrupt.v  Memory.v  RegisterFile.v  StaticTimer.v
fpga/src/peripheral/: Bus_Extender.v  Bus_Extender4.v  CharLCD_4bit.v  Counter.v  DVI.v  GPIO.v  Memory.v  Memory_BRAM.v  Memory_DualPort_RTL.v  Memory_RTL.v  W0RM_Synchro.v
fpga/testbench/: FileCompare.v  FileMemory.v  FileSource.v  W0RM_Sync_1_tb.v  W0RM_Sync_ALU_1_tb.v  W0RM_Sync_ALU_base_tb.v  W0RM_Sync_base_tb.v  W0RM_TopLevel_1_tb.v  W0RM_TopLevel_base_tb.v  W0RM_TopLevel_tb.v
(+126 files in other folders)
